Reset full vision filter when time diff diverges too much
See merge request main/Sumatra!2139

sumatra-commit: c0e2ed4ea33e887bcd090fc4af304ff6a12cbde3