@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009 - 2025, DHBW Mannheim - TIGERs Mannheim
+ * Copyright (c) 2009 - 2026, DHBW Mannheim - TIGERs Mannheim
  */
 
 package edu.tigers.sumatra.vision;
@@ -9,6 +9,7 @@ import com.github.g3force.configurable.Configurable;
 import com.github.g3force.configurable.EConfigUnit;
 import edu.tigers.sumatra.cam.data.CamRobot;
 import edu.tigers.sumatra.ids.BotID;
+import lombok.extern.log4j.Log4j2;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -19,6 +20,7 @@ import java.util.Map;
 /**
  * Track the overall quality/visibility of each robot by counting the number of detection over a fixed time horizon.
  */
+@Log4j2
 public class RobotQualityInspector
 {
 	@Configurable(defValue = "20.0", comment = "The time horizon back into past to measure the quality", unit = EConfigUnit.TIME_S)
@@ -67,6 +69,11 @@ public class RobotQualityInspector
 		}
 
 		double trackingTime = (camRobot.getTimestamp() - initialTimestamp) / 1e9;
+		if (trackingTime < 0)
+		{
+			log.warn("Negative tracking time: {}", trackingTime);
+			return;
+		}
 		double time = Math.min(trackingTime, trackingTimeHorizon);
 		maxPossibleDetectionsPerCam = time / avgDt;
 	}
@@ -79,9 +86,9 @@ public class RobotQualityInspector
 		{
 			while (!timestamps.isEmpty())
 			{
-				if (timestamps.get(0) < timestamp)
+				if (timestamps.getFirst() < timestamp)
 				{
-					timestamps.remove(0);
+					timestamps.removeFirst();
 				} else
 				{
 					break;
